[project]
name = "rerun-lerobot"
version = "0.1.0"
description = "Convert Rerun RRD recordings into LeRobot v3 datasets."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Rerun.io", email = "opensource@rerun.io" }]
keywords = ["rerun", "lerobot", "robotics", "dataset", "imitation-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "av",
  "datafusion",
  "lerobot>=0.4.2",
  "numpy",
  "pandas",
  "pillow",
  "pyarrow",
  # rr.server.Server (used to query RRD files) requires rerun-sdk >= 0.27.
  # Note: LeRobot pins rerun-sdk < 0.27, so this constraint must be overridden
  # at install time. See the README for details.
  "rerun-sdk>=0.27",
  "scipy",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/rerun-io/rerun-lerobot"
Repository = "https://github.com/rerun-io/rerun-lerobot"
Issues = "https://github.com/rerun-io/rerun-lerobot/issues"

[project.scripts]
rerun-lerobot = "rerun_lerobot.__main__:main"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pandas-stubs==2.3.3.251201",
  "pytest",
  "ruff",
  "types-tqdm==4.67.0.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rerun_lerobot"]

[tool.hatch.build.targets.sdist]
include = ["rerun_lerobot", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["lerobot.*", "av.*", "datafusion.*", "scipy.*"]
ignore_missing_imports = true
