[project]
name = "rerun-lerobot"
dynamic = ["version"]
description = "Convert Rerun RRD recordings into LeRobot v3 datasets."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Rerun.io", email = "opensource@rerun.io" }]
keywords = ["rerun", "lerobot", "robotics", "dataset", "imitation-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "av",
  # The `dataset` extra pulls in LeRobot's dataset-writing stack (datasets,
  # torchcodec, ...), which is what we build on. LeRobot 0.6+ only pins
  # rerun-sdk under its `viz` extra (which we don't install), so there is no
  # longer a rerun-sdk version conflict to work around.
  "lerobot[dataset]>=0.6.0",
  "numpy",
  "pandas",
  "pillow",
  "pyarrow",
  # rr.server.Server (used to query RRD files) requires rerun-sdk >= 0.27.
  # The `datafusion` extra pins a datafusion version compatible with rerun's
  # catalog client (a plain `datafusion` dep resolves too new).
  "rerun-sdk[datafusion]>=0.27",
  "scipy",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/rerun-io/rerun-lerobot"
Repository = "https://github.com/rerun-io/rerun-lerobot"
Issues = "https://github.com/rerun-io/rerun-lerobot/issues"

[project.scripts]
rerun-lerobot = "rerun_lerobot.__main__:main"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pandas-stubs==2.3.3.251201",
  "pytest",
  "ruff",
  "types-tqdm==4.67.0.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "rerun_lerobot/__init__.py"
variable = "__version__"

[tool.hatch.build.targets.wheel]
packages = ["rerun_lerobot"]

[tool.hatch.build.targets.sdist]
include = ["rerun_lerobot", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

# Ruff config adapted from https://github.com/rerun-io/rerun_template
[tool.ruff]
target-version = "py312"

# Enable unsafe fixes to allow ruff to apply fixes that may change the behavior of the code.
# This is needed because otherwise ruff will not be able to trim whitespaces in (codegened) docstrings.
unsafe-fixes = true

# Allow preview lints to be enabled (like `PLW1514` to force `encoding` on open).
preview = true
# But we only want to opt-in to certain preview rules!
lint.explicit-preview-rules = true

extend-exclude = [
  "venv/",
  "build/",
  "dist/",
]

line-length = 120

lint.select = [
  "D",       # pydocstyle codes https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "E",       # pycodestyle error codes: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
  "F",       # Flake8 error codes https://flake8.pycqa.org/en/latest/user/error-codes.html
  "I",       # Isort
  "TID",     # flake8-tidy-imports
  "W",       # pycodestyle warning codes: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
  "UP",      # pyupgrade (ensures idomatic code for supported python version)
  "PLW1514", # Force setting `encoding` for open calls. https://docs.astral.sh/ruff/rules/unspecified-encoding/
]

lint.ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D103", # Missing docstring in public function
  "D202", # No blank lines allowed after function docstring
  "D107",
  "D203",
  "D212",
  "D401",
  "D402",
  "D415",
  "D416",
  "E501",   # Line too long (handled by the formatter)
  "TID252", # allow relative imports
  "UP007",  # Keep `Union[X, Y]` for older-Python-compatible runtime type hints
]

lint.unfixable = [
  "PLW1514", # Automatic fix for `encoding` queries the locale, which is what we want to avoid.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
